<resources>
    <string name="recent_page">My Shelf</string>
    <string name="recent_page_sdcard">Local Files</string>
    <string name="recent_page_open_sdcard">Storage Card</string>
    <string name="recent_page_open_bookshelf">KingReader Library</string>
    <string name="recent_page_panda_bookshelf">Panda Library</string>
    <string name="recent_page_ireader_bookshelf">iReader Library</string>
    <string name="recent_page_qq_bookshelf">QQ Library</string>
    <string name="recent_page_mx_bookshelf">MX Library</string>
    <string name="recent_page_anyview_bookshelf">AnyView Library</string>
    <string name="recent_page_password">Password</string>
    <string name="recent_page_delete">Delete</string>
    <string name="recent_page_clear_cache">Clear Cache</string>
    <string name="recent_page_delete_all">Delete All</string>
    <string name="recent_page_jump_begin">Go to Begin</string>
    <string name="recent_page_jump_end">Go to End</string>
    <string name="recent_page_change_facebook">Change Cover</string>
    <string name="recent_page_delete_facebook">Delete Cover</string>
    <string name="recent_page_memory">System Memory</string>
    <string name="recent_page_quit">Quit</string>
    <string name="recent_page_book_store">Kingreader Store</string>
    <string name="sofeware_page">Free Downloads</string>
    <string name="sofeware_page_notfound_net">No Internet connection found, please connect first!</string>
    <string name="search_page">Search</string>
    <string name="search_page_add_download_task">Added to download tasks!</string>
    <string name="search_page_download_task_exist">Already in download tasks!</string>
    <string name="search_page_dead_link">Cannot obtain download link, could be a dead link.</string>
    <string name="search_page_input_hint">Search Complete Editions</string>
    <string name="search_page_parse_link">Parsing download link...</string>
    <string name="search_page_notfound_sdcard">Storage Card not ready, please unmount first!</string>
    <string name="search_page_notfound_net">No Internet connection found, please connect before search!</string>
    <string name="random">3082019b30820104a00302010202044cb50469300d06092a864886f70d01010505003011310f300d060355040313067663626f79313020170d3130313031333030353932315a180f32323130303832363030353932315a3011310f300d060355040313067663626f793130819f300d06092a864886f70d010101050003818d0030818902818100ec3c6d0f5d5941d17e8d432cde9586bfffc8586189aafe8e253d110656fcb91b6f52dba7f02d2f4f731ee64c7cf5b6cc30e11980d54d323d33b07792510f233f182e26ac2fa5a70440cbd125171ad1971f0e5e05b8091c2af13195950fcb9afb8dc77afcf00dc3b16df2b31782811b8ee2e0bcf096d3ed9b8b9e67a7aba022410203010001300d06092a864886f70d010105050003818100e7a8b5bc20b43716871c72c0859a2660bf16c6245a29adb285778f3fb17a7ab7658bc69e9ea11ba4df4520ed8741100452ebcb7cb806351490f4e56a913c5fddacd55e07367ad830be66fa08c1cc65ec3063dc2d853ec44ce33ce42207a550f573bca815439d7204f6f289d008d3e509be82135628cf5106a4873a28eaa78f25</string>
    <string name="random_sys">308201e53082014ea00302010202044e0bef72300d06092a864886f70d01010505003037310b30090603550406130255533110300e060355040a1307416e64726f6964311630140603550403130d416e64726f6964204465627567301e170d3131303633303033333732325a170d3132303632393033333732325a3037310b30090603550406130255533110300e060355040a1307416e64726f6964311630140603550403130d416e64726f696420446562756730819f300d06092a864886f70d010101050003818d00308189028181009b056f47062b07389fae35339fbbe9eaf40e0c9304c397f4dcbfae3ed04272ad32dd5ba17cd2d96ec661a78f8b3feafd192fc5ae009c5e3529aea8b5299216eabfee3d89b34c508edc97f58a0eca92e7a69e8e4ef6bd3ec39fc485166bd2c24b7747c0a613ebebf3b03d8126c996ba48387a67c8b50a352efd233b0449171d750203010001300d06092a864886f70d01010505000381810046405ecdb1d29089aafac1e8b3be5a8d1ceeebb67745961f1ff116aa30f5ba51f8a7f2b1189ee49b497574b821cb5526855e8d8f2c96ce7e2d040a68d0cdd30cf6bf88ce43b7b5d7f3da66009d8c22c4569c839f0c6d96cff83d6c44ef14d61d31b0337da6570e3fb3528315dae8a36cfd340ad5647eabe8a4e7c7aea82ff5e0</string>
    <string name="download_page">Download Manage</string>
    <string name="download_page_reset">Restart</string>
    <string name="download_page_pause">Pause</string>
    <string name="download_page_download">Resume</string>
    <string name="download_page_cancel">Delete</string>
    <string name="download_page_download_all">Start All</string>
    <string name="download_page_pause_all">Pause All</string>
    <string name="download_page_complete">Complete</string>
    <string name="download_page_unknown_length">Unknown Length</string>
    <string name="download_page_idle_status_desc">Waiting... Downloaded</string>
    <string name="download_page_download_status_desc">Downloading...</string>
    <string name="download_page_pause_status_desc">Paused... Downloaded</string>
    <string name="download_page_error_status_desc1">Error the source no longer available</string>
    <string name="download_page_error_status_desc2">Error... Downloaded</string>
    <string name="bookshelf_page">My Downloads</string>
    <string name="bookshelf_page_order_by_name">Sort by Name</string>
    <string name="bookshelf_page_order_by_date">Sort by Date</string>
    <string name="bookshelf_page_order_by_size">Sort by Size</string>
    <string name="bookshelf_page_order_by_size2">Sort by Size</string>
    <string name="bookshelf_page_delete_file">Delete</string>
    <string name="bookshelf_page_refresh">Refresh</string>
    <string name="bookstore_page_cat_new">Recent</string>
    <string name="bookstore_page_cat_hot">Most Download</string>
    <string name="bookstore_page_cat_best">Top Rated</string>
    <string name="bookstore_page_pub_date">Publish Date:</string>
    <string name="bookstore_page_publisher">Provided By:</string>
    <string name="bookstore_page_author">Author:</string>
    <string name="bookstore_page_cagetory">Category:</string>
    <string name="bookstore_page_status">Status:</string>
    <string name="bookstore_page_size">Size:</string>
    <string name="bookstore_page_cost">Cost:</string>
    <string name="bookstore_page_cost_unit">Credit</string>
    <string name="bookstore_page_desc">Description</string>
    <string name="bookstore_page_status_0">Finished</string>
    <string name="bookstore_page_status_1">Not Finished</string>
    <string name="common_select_all">Select All</string>
    <string name="common_select_invert">Invert Selection</string>
    <string name="common_clean_filter">Clear Filters</string>
    <string name="import_dlg_search_hint">Please input search hints</string>
    <string name="import_dlg_file_format">Filter by Format</string>
    <string name="import_dlg_skip_file">Filter by Length</string>
    <string name="bookstore_page">BookStore</string>
    <string name="scrollbar_tip">Tip: Click on the icon on left to switch to accurate adjust mode.</string>
    <string name="offline_tip">Welcome to KingReader Local Reading Mode!</string>
    <string name="quit_tip">Are you sure to quit?</string>
    <string name="quit_title">Confirm</string>
    <string name="quit_no_ask">Remember Choice</string>
    <string name="operation_succ">Succeed!</string>
    <string name="operation_fail">Failed!</string>
    <string name="password_old">当前密码:</string>
    <string name="password_new">新的密码:</string>
    <string name="password_new2">确认密码:</string>
    <string name="import_info">Welcome to KingReader 3! Do you want to import all book on your device? It should take tens of seconds.</string>
    <string name="delete_info">Do you want to delete books on storage cards as well?</string>
    <string name="tips_network_unavailable">Network unavailable！</string>
    <string name="wifi_ui_txt1">Open wifi,you can obtain below tools:</string>
    <string name="wifi_ui_txt2">Open below IP in your computer browser</string>
    <string name="wifi_ui_txt3">Attention:mobile phone and computer require in the same net to link</string>
    <string name="wifi_ui_butn_txt">start</string>
    <string name="wifi_ui_dg_txt">wifi is not open,is not to open?</string>
    <string name="wifi_ui_dg_txt2">>wifi is not open，please to open it</string>
    <string name="wifi_ui_dg_btn1">start</string>
    <string name="wifi_ui_dg_btn2">cancel</string>
    <string name="wifi_title">Wireless Assistant</string>
    <string name="TBI_Menu">Advanced</string>
    <string name="TBI_QuickSetting">Quick Setup</string>
    <string name="TBI_OpenFile">Open Book</string>
    <string name="TBI_PrevFile">Previous</string>
    <string name="TBI_NextFile">Next</string>
    <string name="TBI_AutoScroll">Auto Scroll</string>
    <string name="TBI_PauseScroll">Stop Scroll</string>
    <string name="TBI_Search">Search Book</string>
    <string name="TBI_ShowBookmark">Bookmarks</string>
    <string name="TBI_AddBookmark">Add bm</string>
    <string name="TBI_GestureSetting">Gesture</string>
    <string name="TBI_Quit">Quit to Shelf</string>
    <string name="main_summenu_navigation">Navigate Tools</string>
    <string name="TBI_Feedback">Feedback</string>
    <string name="TBI_Chapter">Chapters</string>
    <string name="TBI_ThemeSetting">Themes</string>
    <string name="TBI_ResetToolbar">Reset Toolbar</string>
    <string name="TBI_SpeedDown">Accelerate</string>
    <string name="TBI_SpeedUp">Decelerate</string>
    <string name="TBI_NextPage">Next Page</string>
    <string name="TBI_PrevPage">Prev Page</string>
    <string name="TBI_ShowPercent">Jump</string>
    <string name="TBI_RotateScreen">Rotate Screen</string>
    <string name="TBI_ChangeScreenMode">Change Mode</string>
    <string name="TBI_NextChapter">Next Chapter</string>
    <string name="TBI_PrevChapter">Prev Chapter</string>
    <string name="TBI_NextInnerPic">Next Pic</string>
    <string name="TBI_PrevInnerPic">Prev Pic</string>
    <string name="TBI_NextInnerBook">Next Book</string>
    <string name="TBI_PrevInnerBook">Prev Book</string>
    <string name="TBI_NavigateFront">Go Forward</string>
    <string name="TBI_NavigateBack">Go Back</string>
    <string name="TBI_ShowUserGuide">What New</string>
    <string name="wifi_assistant">Wifi Tools</string>
    <string name="txt_set_typeset_indent">First Line Indent</string>
    <string name="txt_set_typeset_combine_break_line">Detect Broken Line</string>
    <string name="txt_set_typeset_work_break">Donot Break Words</string>
    <string name="txt_set_typeset_skip_blank_count">Layout style</string>
    <string name="txt_set_typeset_vertical_direction">Text direction</string>
    <string name="txt_set_typeset_indent_summary">Indent of 2 characters for first line of a passage</string>
    <string name="txt_set_typeset_combine_break_line_summary">Detect accidentally broken lines and repair them</string>
    <string name="txt_set_typeset_work_break_summary">Donot break a whole word when breaking a line</string>
    <string name="txt_set_typeset_vertical_direction_summary">From left to right</string>
    <string name="tips_nbs_btn_login">Login</string>
    <string name="tips_nbs_btn_regsiter">Register</string>
    <string name="tips_nbs_btn_create_account">Regsiter</string>
    <string name="tips_nbs_btn_quick_create_account">Casually</string>
    <string name="tips_nbs_create_account">Create user account</string>
    <string name="tips_nbs_account">Account(* 6-20 alphanumeric combination)</string>
    <string name="tips_nbs_account_hint" />
    <string name="tips_nbs_password">Password(* 6-16 digital combination)</string>
    <string name="tips_nbs_password_hint" />
    <string name="tips_nbs_password2">Confirm(* confirm the password)</string>
    <string name="tips_nbs_email">Email</string>
    <string name="tips_nbs_account_1">Account</string>
    <string name="tips_nbs_password_1">Password</string>
    <string name="plugin_pdf">PDF viewer</string>
    <string name="plugin_pdf_summary">Support Pdf format reading</string>
    <string name="plugin_comic">Comic viewer</string>
    <string name="plugin_comic_summary">Support Zip/Rar format comic</string>
</resources>