<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/nbs_listview_top_bkg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingTop="23.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/nbs_unlogin" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="35.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/account_desc" android:paddingLeft="6.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_account_1" />
            <EditText android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/account" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/tips_nbs_account_hint" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/password_desc" android:paddingLeft="6.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_password_1" />
            <EditText android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/tips_nbs_password_hint" android:password="true" android:singleLine="true" android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ" android:inputType="number" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="35.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="@color/nbs_user_desc_text_color" android:id="@id/login" android:background="@drawable/dlg_btn_def_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_btn_login" android:layout_weight="1.0" />
            <LinearLayout android:layout_width="6.0dip" android:layout_height="wrap_content" />
            <Button android:textColor="@color/nbs_user_desc_text_color" android:id="@id/create_account" android:background="@drawable/dlg_btn_def_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_btn_regsiter" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>