<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/nbs_listview_top_bkg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="20.0dip" android:textColor="@color/nbs_user_desc_text_color" android:layout_gravity="center_horizontal" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_create_account" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/account_desc" android:paddingLeft="6.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_account" />
            <EditText android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/account" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/tips_nbs_account_hint" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/password_desc" android:paddingLeft="6.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_password" />
            <EditText android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ" android:inputType="number" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/password2_desc" android:paddingLeft="6.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_password2" />
            <EditText android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/password2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:singleLine="true" android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ" android:inputType="number" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/email_desc" android:paddingLeft="6.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_email" />
            <EditText android:textSize="13.0dip" android:textColor="@color/nbs_user_desc_text_color" android:id="@id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:digits="_-.0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ@" android:inputType="textEmailAddress" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="@color/nbs_user_desc_text_color" android:id="@id/create_account" android:background="@drawable/dlg_btn_def_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_btn_create_account" android:layout_weight="1.0" />
            <LinearLayout android:layout_width="6.0dip" android:layout_height="wrap_content" />
            <Button android:textColor="@color/nbs_user_desc_text_color" android:id="@id/quick_create_account" android:background="@drawable/dlg_btn_def_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_nbs_btn_quick_create_account" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>