<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.kingreader.framework.os.android.ui.uicontrols.BookShelf android:id="@id/book_shelf" android:background="@color/book_list_bkc" android:paddingTop="50.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:background="@drawable/bs_title_bkg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:layout_gravity="center_vertical" android:id="@id/book_store" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/bookstore_page" style="@style/Widget.Button.Nav.BookStore" />
            <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/recent_page" android:layout_weight="1.0" style="@style/Widget.TextView.Nav.Title" />
            <Button android:layout_gravity="center_vertical" android:id="@id/wifi_assistant" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/wifi_assistant" style="@style/Widget.Button.Nav.BookStore" />
        </LinearLayout>
        <com.kingreader.framework.os.android.ui.uicontrols.BmpShadowView android:id="@id/shadow" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</merge>