<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/blank_line_count" android:background="@drawable/book_list_selector" android:layout_width="fill_parent" android:layout_height="64.0dip">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="40.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="16.0sp" android:textColor="#ff272727" android:ellipsize="end" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_set_typeset_skip_blank_count" android:singleLine="true" />
            <TextView android:textSize="11.0sp" android:textColor="#ff858585" android:ellipsize="end" android:id="@id/blank_line_count_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:shadowColor="@*android:color/white" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
        </LinearLayout>
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:src="@drawable/arrow" />
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="2.0px" android:src="@drawable/bs_list_divider" android:scaleType="fitXY" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="64.0dip">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="40.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="16.0sp" android:textColor="#ff272727" android:ellipsize="end" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_set_typeset_indent" android:singleLine="true" />
            <TextView android:textSize="11.0sp" android:textColor="#ff858585" android:ellipsize="end" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_set_typeset_indent_summary" android:singleLine="true" android:shadowColor="@*android:color/white" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
        </LinearLayout>
        <ToggleButton android:layout_gravity="center_vertical" android:id="@id/indent" android:background="@drawable/checkbox_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:textOn="" android:textOff="" />
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="2.0px" android:src="@drawable/bs_list_divider" android:scaleType="fitXY" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="64.0dip">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="40.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="16.0sp" android:textColor="#ff272727" android:ellipsize="end" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_set_typeset_combine_break_line" android:singleLine="true" />
            <TextView android:textSize="11.0sp" android:textColor="#ff858585" android:ellipsize="end" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_set_typeset_combine_break_line_summary" android:singleLine="true" android:shadowColor="@*android:color/white" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
        </LinearLayout>
        <ToggleButton android:layout_gravity="center_vertical" android:id="@id/combine_break_line" android:background="@drawable/checkbox_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:textOn="" android:textOff="" />
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="2.0px" android:src="@drawable/bs_list_divider" android:scaleType="fitXY" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="64.0dip">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="40.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="16.0sp" android:textColor="#ff272727" android:ellipsize="end" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_set_typeset_work_break" android:singleLine="true" />
            <TextView android:textSize="11.0sp" android:textColor="#ff858585" android:ellipsize="end" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_set_typeset_work_break_summary" android:singleLine="true" android:shadowColor="@*android:color/white" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
        </LinearLayout>
        <ToggleButton android:layout_gravity="center_vertical" android:id="@id/word_break" android:background="@drawable/checkbox_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:textOn="" android:textOff="" />
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="2.0px" android:src="@drawable/bs_list_divider" android:scaleType="fitXY" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="64.0dip">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="40.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="16.0sp" android:textColor="#ff272727" android:ellipsize="end" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_set_typeset_vertical_direction" android:singleLine="true" />
            <TextView android:textSize="11.0sp" android:textColor="#ff858585" android:ellipsize="end" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/txt_set_typeset_vertical_direction_summary" android:singleLine="true" android:shadowColor="@*android:color/white" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
        </LinearLayout>
        <ToggleButton android:layout_gravity="center_vertical" android:id="@id/vertical" android:background="@drawable/checkbox_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:textOn="" android:textOff="" />
    </LinearLayout>
</LinearLayout>